# Antivirus

./: AVBase.cpp  AVBase.h  CMakeLists.txt  ScannerFunctions.cpp  ScannerFunctions.h  Signature.cpp  Signature.h  main.cpp
